--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Fakeoff. Simple fake banking.</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-  
-  </body>
+
+<head>
+	<title>Fakeoff. Simple fake banking.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+	<meta name="theme-color" content="#f44336">
+</head>
+
+<body>
+	<div id="root" />
+	<script src='/vendor.bundle.js'></script>
+	<script src='/app.bundle.js'></script>
+</body>
+
 </html>
