--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json">
 	<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-	<meta name="theme-color" content="#fff">
+	<meta name="theme-color" content="#000">
 </head>
 
 <body>
