--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json">
 	<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 	<meta name="theme-color" content="#000">
