--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Fakeoff. Simple fake banking.</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=PT+Mono|Roboto+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json">
